--- a/views/admin-styles.css
+++ b/views/admin-styles.css
@@ -3,11 +3,14 @@
 }
 
 body {
-    background-color: lightgrey;
-}
-
-.sideMenu {
     background-color: #eee;
+}
+.sticky {
+    position: fixed;
+    top: 60px;
+}
+.sideMenu {
+    background-color: #ddd;
     max-width: 200px;
     width: 100%;
     position: absolute;
@@ -15,7 +18,7 @@ body {
     bottom: 0;
 }
 .sideMenu nav button {
-    background-color: #ddd;
+    background-color: #ccc;
     border: none;
     width: 100%;
     text-align: left;
@@ -25,17 +28,38 @@ body {
     display: block;
 }
 .sideMenu nav button:hover {
-    background-color: #ccc;
+    background-color: #bbb;
 }
 .sideMenu nav button.active {
-    background-color: #bbb;
+    background-color: #aaa;
     border-left: 8px solid green;
 }
 .container {
-    max-width: 1074px;
+    max-width: 990px;
     width: 100%;
     position: absolute;
     left: 200px;
     top: 64px;
     bottom: 0;
+}
+.hidetext {
+    -webkit-text-security: disc; /* Default */
+}
+.container {
+    overflow: visible !important;
+}
+#myInput {
+    /* background-image: url("/css/searchicon.png"); */
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    width: 60%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 3px solid #ddd;
+    border-radius: 1rem;
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+.btnLogout {
+    margin-left: 830px;
 }
