--- a/views/admin.html
+++ b/views/admin.html
@@ -10,7 +10,11 @@
     <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
             <label class="navbar-brand">Zazzle Tools - Admin Panel</label>
-            <button class="btn btn-secondary btn-xs my-xs-btn btnLogout" type="button" onclick="logoutFunc()">
+            <button
+                class="btn btn-secondary btn-xs my-xs-btn btnLogout ml-auto mr-1"
+                type="button"
+                onclick="logoutFunc()"
+            >
                 <span class="glyphicon glyphicon-pencil"> Logout </span>
             </button>
         </nav>
