--- a/views/login.html
+++ b/views/login.html
@@ -1,187 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Zazzle</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Zazzle</title>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link
-            href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round"
-            rel="stylesheet"
-        />
-        <link
-            rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        />
-        <link rel="stylesheet" href="bootstrap.min.css" />
-        <style>
-            body {
-                font-family: "Varela Round", sans-serif;
-            }
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="bootstrap.min.css" />
+    <style>
+      body {
+        font-family: "Varela Round", sans-serif;
+      }
 
-            #myModal {
-                margin-top: -30px;
-            }
+      #myModal {
+        margin-top: -30px;
+      }
 
-            .modal-login {
-                color: #636363;
-                width: 400px;
-                margin: 50px auto;
-            }
+      .modal-login {
+        color: #636363;
+        width: 400px;
+        margin: 50px auto;
+      }
 
-            .modal-login .modal-content {
-                padding: 20px;
-                border-radius: 5px;
-                border: none;
-            }
+      .modal-login .modal-content {
+        padding: 20px;
+        border-radius: 5px;
+        border: none;
+      }
 
-            .modal-login .modal-header {
-                border-bottom: none;
-                position: relative;
-                justify-content: center;
-            }
+      .modal-login .modal-header {
+        border-bottom: none;
+        position: relative;
+        justify-content: center;
+      }
 
-            .modal-login h4 {
-                text-align: center;
-                font-size: 26px;
-            }
+      .modal-login h4 {
+        text-align: center;
+        font-size: 26px;
+      }
 
-            .modal-login .form-group {
-                position: relative;
-            }
+      .modal-login .form-group {
+        position: relative;
+      }
 
-            .modal-login i {
-                position: absolute;
-                left: 13px;
-                top: 11px;
-                font-size: 18px;
-            }
+      .modal-login i {
+        position: absolute;
+        left: 13px;
+        top: 11px;
+        font-size: 18px;
+      }
 
-            .modal-login .form-control {
-                padding-left: 40px;
-            }
+      .modal-login .form-control {
+        padding-left: 40px;
+      }
 
-            .modal-login .form-control:focus {
-                border-color: #00ce81;
-            }
+      .modal-login .form-control:focus {
+        border-color: #00ce81;
+      }
 
-            .modal-login .form-control,
-            .modal-login .btn {
-                min-height: 40px;
-                border-radius: 3px;
-            }
+      .modal-login .form-control,
+      .modal-login .btn {
+        min-height: 40px;
+        border-radius: 3px;
+      }
 
-            .modal-login .hint-text {
-                text-align: center;
-                padding-top: 10px;
-            }
+      .modal-login .hint-text {
+        text-align: center;
+        padding-top: 10px;
+      }
 
-            .modal-login .close {
-                position: absolute;
-                top: -5px;
-                right: -5px;
-            }
+      .modal-login .close {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+      }
 
-            .modal-login .btn {
-                background: #00ce81;
-                border: none;
-                line-height: normal;
-            }
+      .modal-login .btn {
+        background: #00ce81;
+        border: none;
+        line-height: normal;
+      }
 
-            .modal-login .btn:hover,
-            .modal-login .btn:focus {
-                background: #00bf78;
-            }
+      .modal-login .btn:hover,
+      .modal-login .btn:focus {
+        background: #00bf78;
+      }
 
-            .modal-login .modal-footer {
-                background: #ecf0f1;
-                border-color: #dee4e7;
-                text-align: center;
-                margin: 0 -20px -20px;
-                border-radius: 5px;
-                font-size: 13px;
-                justify-content: center;
-            }
+      .modal-login .modal-footer {
+        background: #ecf0f1;
+        border-color: #dee4e7;
+        text-align: center;
+        margin: 0 -20px -20px;
+        border-radius: 5px;
+        font-size: 13px;
+        justify-content: center;
+      }
 
-            .modal-login .modal-footer a {
-                color: #999;
-            }
+      .modal-login .modal-footer a {
+        color: #999;
+      }
 
-            .trigger-btn {
-                display: inline-block;
-                margin: 100px auto;
-            }
+      .trigger-btn {
+        display: inline-block;
+        margin: 100px auto;
+      }
 
-            .db-status {
-                margin: auto;
-                position: relative;
-                text-align: center;
-                margin-top: -10px;
-                font-size: 12px;
-                /* margin-left: 300px;
+      .db-status {
+        margin: auto;
+        position: relative;
+        text-align: center;
+        margin-top: -10px;
+        font-size: 12px;
+        /* margin-left: 300px;
 		margin-right: auto; */
-            }
+      }
 
-            .version {
-                text-align: right;
-                font-size: x-small;
-            }
-        </style>
-    </head>
+      .version {
+        text-align: right;
+        font-size: x-small;
+      }
+      .mac-address {
+        position: relative;
+        text-align: center;
+        font-size: 12px;
+      }
+    </style>
+  </head>
 
-    <body>
-        <!-- Modal HTML -->
-        <div id="myModal">
-            <div class="modal-login">
-                <div class="version" id="version">vX.Y.Z</div>
-                <div id="msg-update" class="msg-update"></div>
-                <div class="">
-                    <div class="modal-header">
-                        <h4 class="modal-title">Login</h4>
-                    </div>
-                    <div id="msg-cus"></div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <i class="fa fa-user"></i>
-                                <input
-                                    type="text"
-                                    class="form-control"
-                                    id="username"
-                                    name="username"
-                                    placeholder="Username"
-                                    required="required"
-                                />
-                            </div>
-                            <div class="form-group">
-                                <i class="fa fa-lock"></i>
-                                <input
-                                    type="password"
-                                    class="form-control"
-                                    id="password"
-                                    name="password"
-                                    placeholder="Password"
-                                    required="required"
-                                />
-                            </div>
-                            <div class="form-group">
-                                <input
-                                    type="submit"
-                                    class="btn btn-primary btn-block btn-lg"
-                                    value="Login"
-                                />
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+  <body>
+    <!-- Modal HTML -->
+    <div id="myModal">
+      <div class="modal-login">
+        <div class="version" id="version">vX.Y.Z</div>
+        <div id="msg-update" class="msg-update"></div>
+        <div class="">
+          <div class="modal-header">
+            <h4 class="modal-title">Login</h4>
+          </div>
+          <div id="msg-cus"></div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <i class="fa fa-user"></i>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="username"
+                  name="username"
+                  placeholder="Username"
+                  required="required"
+                />
+              </div>
+              <div class="form-group">
+                <i class="fa fa-lock"></i>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  name="password"
+                  placeholder="Password"
+                  required="required"
+                />
+              </div>
+              <div class="form-group">
+                <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login" />
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="db-status">Connecting to DB...</div>
-        <script>
-            require("./../src/loginRenderer");
-        </script>
-    </body>
+      </div>
+    </div>
+    <div class="db-status">Connecting to DB...</div>
+    <div class="mac-address">MAC:</div>
+    <script>
+      require("./../src/loginRenderer");
+    </script>
+  </body>
 </html>
