--- a/views/home.html
+++ b/views/home.html
@@ -48,7 +48,7 @@
 
       /*Style the text area */
       .textarea {
-        width: 500px;
+        width: 90%;
         height: 300px;
         border: 1px solid #ccc;
       }
